[package]
name = "ACC"
version = "0.1.0"
authors = ["Stefan Reiter <stefan@pimaker.at>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gpio-cdev = { path = "./gpio-cdev", features = ["async-tokio"] }
futures = "0.3"
libc = "0.2"
clap = "2.33"
lazy_static = "1.4"

